# easy-subtitle

./: .gitignore  README.md  SKILL.md  pyproject.toml
easy_subtitle/: __init__.py  aligner.py  cli.py  srt_writer.py  transcriber.py
